--- a/app/src/main/res/layout/fragment_question.xml
+++ b/app/src/main/res/layout/fragment_question.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     tools:context=".ui.fragment.QuestionFragment">
 
-    <android.support.v4.widget.SwipeRefreshLayout
+    <com.qmuiteam.qmui.widget.pullRefreshLayout.QMUIPullRefreshLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/fragment_question_swipe_refresh_layout">
@@ -20,7 +20,7 @@
             tools:context=".ui.fragment.QuestionFragment"
             tools:listitem="@layout/fragment_question_list_item" />
 
-    </android.support.v4.widget.SwipeRefreshLayout>
+    </com.qmuiteam.qmui.widget.pullRefreshLayout.QMUIPullRefreshLayout>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_add_question"
@@ -30,6 +30,8 @@
         app:layout_constraintRight_toRightOf="parent"
         android:layout_margin="16dp"
         app:pressedTranslationZ="12dp"
+        app:backgroundTint="@color/app_color_blue_2"
+        app:rippleColor="@color/app_color_blue_2_pressed"
         app:srcCompat="@drawable/ic_add_white" />
 
 </android.support.constraint.ConstraintLayout>
