--- a/app/src/main/res/layout/activity_course_work_edit.xml
+++ b/app/src/main/res/layout/activity_course_work_edit.xml
@@ -40,6 +40,7 @@
                 <EditText
                     android:id="@+id/course_work_edit_text_edit_name"
                     style="@style/CommonEditText"
+                    android:hint="输入作业名称"
                     android:inputType="textMultiLine"
                     android:scrollHorizontally="false"
                     android:singleLine="false"
@@ -173,7 +174,7 @@
 
                 <EditText
                     android:id="@+id/course_work_edit_text_edit_deadline"
-                    style="@style/QDCommonTitle"
+                    style="@style/CommonEditText"
                     android:inputType="text"
                     android:hint="点击选择日期"
                     android:focusable="false"
@@ -236,9 +237,9 @@
                 <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
                     android:id="@+id/course_work_button_add_question"
                     style="@style/QDRoundButtonStyle"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="0.45"
+                    android:layout_weight="1"
                     android:text="增加一个试题"/>
 
             </LinearLayout>
