--- a/app/src/main/res/layout/activity_submitted_exam.xml
+++ b/app/src/main/res/layout/activity_submitted_exam.xml
@@ -1,56 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<com.qmuiteam.qmui.widget.QMUIWindowInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.activity.SubmittedExamActivity">
+    tools:context=".ui.activity.SubmittedCourseWorkActivity">
 
-    <LinearLayout
-        android:id="@+id/exam_information_layout"
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="?attr/qmui_topbar_height"
+        android:fitsSystemWindows="true">
+
+        <com.qmuiteam.qmui.widget.grouplist.QMUIGroupListView
+            android:id="@+id/submit_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+    </ScrollView>
+
+    <com.qmuiteam.qmui.widget.QMUITopBarLayout
+        android:id="@+id/topbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:fitsSystemWindows="true"/>
 
-        <include
-            android:id="@+id/exam_information"
-            layout="@layout/activity_exam_list_item" />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:layout_marginTop="4dp"
-            android:background="@color/colorBlack"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"/>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/exam_information_layout">
-
-        <android.support.v4.widget.SwipeRefreshLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/activity_submitted_exam_swipe_refresh_layout">
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/activity_submit_list"
-                android:name="com.corkili.learningclient.ui.activity.SubmittedExamActivity"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
-                tools:context=".ui.activity.CourseWorkActivity"
-                tools:listitem="@layout/activity_submit_list_item" />
-
-        </android.support.v4.widget.SwipeRefreshLayout>
-
-    </LinearLayout>
-
-</android.support.constraint.ConstraintLayout>
+</com.qmuiteam.qmui.widget.QMUIWindowInsetLayout>
