--- a/app/src/main/res/layout/activity_course_catalog.xml
+++ b/app/src/main/res/layout/activity_course_catalog.xml
@@ -1,16 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.qmuiteam.qmui.widget.QMUIWindowInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.activity.CourseCatalogActivity">
 
-    <ListView
-        android:id="@+id/catalog_item_list"
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:divider="#aaa"
-        android:dividerHeight="1px"
-        tools:listitem="@layout/activity_course_catalog_item"/>
+        android:layout_marginTop="?attr/qmui_topbar_height"
+        android:fitsSystemWindows="true">
 
-</android.support.constraint.ConstraintLayout>
+        <ListView
+            android:id="@+id/catalog_item_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:divider="#aaa"
+            android:dividerHeight="1px"
+            tools:listitem="@layout/activity_course_catalog_item"/>
+
+    </android.support.constraint.ConstraintLayout>
+
+    <com.qmuiteam.qmui.widget.QMUITopBarLayout
+        android:id="@+id/topbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fitsSystemWindows="true"/>
+
+</com.qmuiteam.qmui.widget.QMUIWindowInsetLayout>
