--- a/app/src/main/res/layout/activity_scorm.xml
+++ b/app/src/main/res/layout/activity_scorm.xml
@@ -1,111 +1,125 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.qmuiteam.qmui.widget.QMUIWindowInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.activity.ScormActivity">
 
-    <FrameLayout
-        android:id="@+id/scorm_view_layout"
+    <android.support.constraint.ConstraintLayout 
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/navigation_device_layout">
+        android:layout_height="match_parent"
+        android:layout_marginTop="?attr/qmui_topbar_height"
+        android:fitsSystemWindows="true">
 
-        <WebView
-            android:id="@+id/scorm_view"
+        <FrameLayout
+            android:id="@+id/scorm_view_layout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-
-        <ProgressBar
-            android:id="@+id/scorm_load_progress_bar"
-            style="@android:style/Widget.ProgressBar.Horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="3dip"
-            android:max="100"
-            android:progress="0"
-            android:visibility="gone"/>
-
-        <TextView
-            android:id="@+id/scorm_view_tip"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/text_margin"
-            android:textAppearance="?attr/textAppearanceListItem"
-            android:text="请点击下方的按钮开始学习"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:visibility="gone"/>
-
-    </FrameLayout>
-
-    <android.support.constraint.ConstraintLayout
-        android:id="@+id/navigation_device_layout"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
-
-        <Button
-            android:id="@+id/button_choose"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:text="跳转"
+            android:layout_height="0dp"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@id/button_previous"/>
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/navigation_device_layout">
 
-        <Button
-            android:id="@+id/button_previous"
+            <WebView
+                android:id="@+id/scorm_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
+            <ProgressBar
+                android:id="@+id/scorm_load_progress_bar"
+                style="@android:style/Widget.ProgressBar.Horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="3dip"
+                android:max="100"
+                android:progress="0"
+                android:visibility="gone"/>
+
+            <TextView
+                android:id="@+id/scorm_view_tip"
+                style="@style/QDCommonDescription"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_margin="@dimen/text_margin"
+                android:text="请点击下方的按钮开始学习"
+                android:visibility="gone"/>
+
+        </FrameLayout>
+
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/navigation_device_layout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:text="向前"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toRightOf="@id/button_choose"
-            app:layout_constraintRight_toLeftOf="@id/button_next"/>
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent">
 
-        <Button
-            android:id="@+id/button_next"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:text="向后"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toRightOf="@id/button_previous"
-            app:layout_constraintRight_toLeftOf="@id/button_suspend_and_resume"/>
+            <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
+                style="@style/QDRoundButtonStyle"
+                android:id="@+id/button_choose"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="跳转"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toLeftOf="@id/button_previous"/>
 
-        <Button
-            android:id="@+id/button_suspend_and_resume"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:text="暂停"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toRightOf="@id/button_next"
-            app:layout_constraintRight_toLeftOf="@id/button_start_and_exit"
-            android:visibility="gone"/>
+            <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
+                android:id="@+id/button_previous"
+                style="@style/QDRoundButtonStyle"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="向前"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toRightOf="@id/button_choose"
+                app:layout_constraintRight_toLeftOf="@id/button_next"/>
 
-        <Button
-            android:id="@+id/button_start_and_exit"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:text="开始"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toRightOf="@id/button_suspend_and_resume"
-            app:layout_constraintRight_toRightOf="parent"/>
+            <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
+                android:id="@+id/button_next"
+                style="@style/QDRoundButtonStyle"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="向后"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toRightOf="@id/button_previous"
+                app:layout_constraintRight_toLeftOf="@id/button_suspend_and_resume"/>
+
+            <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
+                android:id="@+id/button_suspend_and_resume"
+                style="@style/QDRoundButtonStyle"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="暂停"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toRightOf="@id/button_next"
+                app:layout_constraintRight_toLeftOf="@id/button_start_and_exit"
+                android:visibility="gone"/>
+
+            <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
+                android:id="@+id/button_start_and_exit"
+                style="@style/QDRoundButtonStyle"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="开始"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toRightOf="@id/button_suspend_and_resume"
+                app:layout_constraintRight_toRightOf="parent"/>
+
+        </android.support.constraint.ConstraintLayout>
 
     </android.support.constraint.ConstraintLayout>
 
-</android.support.constraint.ConstraintLayout>
+    <com.qmuiteam.qmui.widget.QMUITopBarLayout
+        android:id="@+id/topbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fitsSystemWindows="true"/>
+    
+</com.qmuiteam.qmui.widget.QMUIWindowInsetLayout>
+
